Prevent the border of the player to flicker

--- a/blog/styles/album.module.css
+++ b/blog/styles/album.module.css
@@ -29,6 +29,10 @@
 	margin-top: 15px;
 }
 
+.player {
+	margin-right: 1px;
+}
+
 .description {
 	text-align: justify;
 	line-height: 1.75;
